import org.springframework.boot.gradle.tasks.run.BootRun

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.restaurant'
version = '1.0.0'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://repo.maven.apache.org/maven2")
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    
    // PostgreSQL
    implementation 'org.postgresql:postgresql'
    
    // In-memory rate limiting (no Redis)
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    
    // Database migrations
    implementation 'org.flywaydb:flyway-core'

    // Distributed locks for @Scheduled jobs (JDBC provider → shared DB)
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.16.0'
    
    // Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    
    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    implementation 'org.springframework.security:spring-security-crypto'
    
    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Logging
    implementation 'ch.qos.logback:logback-classic'
    
    // Excel processing
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.8'
    testImplementation 'org.testcontainers:postgresql:1.19.8'
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Local dev: create restaurant_db_dev + run with dev profile (see application-dev.yml)
tasks.register('ensureDevDatabase', Exec) {
    group = 'application'
    description = 'Creates local Postgres database restaurant_db_dev if missing'
    workingDir = rootDir
    commandLine 'bash', "${rootDir}/scripts/ensure-dev-database.sh"
}

def springProfilesFromGradleEnv = {
    def a = (System.getenv('SPRING_PROFILES_ACTIVE') ?: '').split(',').collect { it.trim().toLowerCase() }.findAll { !it.isEmpty() }
    def b = (System.getProperty('spring.profiles.active') ?: '').split(',').collect { it.trim().toLowerCase() }.findAll { !it.isEmpty() }
    (a + b).unique()
}

def isDevProfileForGradle = { springProfilesFromGradleEnv().contains('dev') }

/** Same as bootRun / devBootRun loading .env — includes local-docker (Compose Postgres on 5433). */
def isBootRunWithMergedDotEnv = {
    def p = springProfilesFromGradleEnv()
    p.contains('dev') || p.contains('local-docker')
}

def ensureDevDbFromProjectProp = {
    (findProperty('ensureDevDb') ?: findProperty('dev') ?: 'false').toString().toBoolean()
}

/** Merges project root `.env` into the BootRun task env when the key is unset (OS env + task env). */
def mergeProjectDotEnv = { BootRun task ->
    def envFile = file('.env')
    if (!envFile.exists()) {
        return
    }
    envFile.eachLine { line ->
        def t = line.trim()
        if (!t || t.startsWith('#') || !t.contains('=')) {
            return
        }
        def idx = t.indexOf('=')
        def key = t.substring(0, idx).trim()
        def value = t.substring(idx + 1).trim()
        if (value.length() >= 2
                && ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith("'") && value.endsWith("'")))) {
            value = value.substring(1, value.length() - 1)
        }
        if (task.environment[key] == null && System.getenv(key) == null) {
            task.environment[key] = value
        }
    }
}

tasks.register('devBootRun', BootRun) {
    group = 'application'
    description = 'ensureDevDatabase + BootRun with profile dev; loads .env into the run (see application-dev.yml)'
    dependsOn ensureDevDatabase
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.restaurant.RestaurantManagementApplication'
    systemProperty 'spring.profiles.active', 'dev'
    systemProperty 'server.port', '8080'
    doFirst { mergeProjectDotEnv(delegate) }
}

// ensureDevDatabase only when dev is requested (env/property) or explicitly -PensureDevDb / -Pdev — not for every bootRun (CI-safe).
tasks.named('bootRun', BootRun) { task ->
    if (isDevProfileForGradle() || ensureDevDbFromProjectProp()) {
        dependsOn ensureDevDatabase
    }
    task.doFirst {
        if (!(isBootRunWithMergedDotEnv() || ensureDevDbFromProjectProp())) {
            return
        }
        mergeProjectDotEnv(task)
    }
}

// Docker-dependent IT (Testcontainers start Postgres; requires Docker daemon)
tasks.register('dockerIT', Test) {
    group = 'verification'
    description = 'Run RlsIsolationIT and NetworkHierarchyMigrationIT (Testcontainers)'
    useJUnitPlatform()
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    filter {
        includeTestsMatching '*RlsIsolationIT'
        includeTestsMatching '*NetworkHierarchyMigrationIT'
    }
}

// Задача для генерации bcrypt хешей паролей
task generatePasswordHashes(type: JavaExec) {
    group = 'utility'
    description = 'Генерирует bcrypt хеши для паролей (для использования в миграциях)'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.restaurant.util.PasswordHashGenerator'
}

